Fixed nav hamburger not always visible

--- a/components/header/template.css
+++ b/components/header/template.css
@@ -36,7 +36,7 @@
 .foam {
   float: left;
   position: absolute;
-  z-index: 300;
+  z-index: 90;
   width: 4vw;
   height: 4vw;
   border-radius: 30px;
